[FIX] Update for site login popup (tab was overlapping topbar).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/5.x@26898 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/jqui.css
+++ b/styles/jqui.css
@@ -198,6 +198,10 @@ div.error {
 	margin-top: 10px;
 }
 
+#siteloginbar_popup {
+	bottom: 1px;
+}
+
 #tiki-top {
 	padding: .5em .3em .3em 1em;
 	border: 1px solid #aaaaaa;
